--- a/imageloader-demo/android_dp_analysis_book/.project
+++ b/imageloader-demo/android_dp_analysis_book/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>android_dp_analysis_book</name>
+	<name>android_dp_chapter01</name>
 	<comment></comment>
 	<projects>
 	</projects>
